Updated Pokedex page
Created template for the Pokedex page to display basic information

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,23 @@
 <body>
   <div class="title">
-    <h1>Pokemon Guide</h1>
+    <h1>Pokémon Guide</h1>
   </div>
   <div class="subtitle">
     <h3>
-      A helpful tool for learning more about everything Pokemon.
+      A helpful tool for learning more about everything Pokémon.
     </h3>
   </div>
   <div class="section">
     <div class="subtitle">
-      <h2>Pokedex</h2>
+      <h2>Pokédex</h2>
     </div>
     <div>
       <img
         style="margin-right: 100px"
-        src="../../../assets/KantoStarters.jpg"
+        src="../../../assets/home/KantoStarters.jpg"
       />
       <span>
-        A comprehensive Pokedex featuring all 891 Pokemon across every
+        A comprehensive Pokédex featuring all 891 Pokémon across every
         generation.
       </span>
     </div>
@@ -29,10 +29,10 @@
     <div>
       <span style="margin-right: 100px">
         Experiment with the type chart to view matchups between different type
-        combinations
+        combinations.
       </span>
       <img
-        src="../../../assets/TypeChart.png"
+        src="../../../assets/home/TypeChart.png"
       />
     </div>
   </div>
@@ -42,10 +42,10 @@
     </div>
     <div>
       <img style="margin-right: 100px;"
-        src="../../../assets/SuperEffective.png"
+        src="../../../assets/home/SuperEffective.png"
       />
       <span >
-        Simulate turns of a battle with the in-depth damage calculator
+        Simulate turns of a battle with the in-depth damage calculator.
       </span>
     </div>
   </div>
