--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-html, body, header, footer, nav, article, section, form, fieldset, legend, figure, figcaption, h1, h2, h3, ul, li, body, div, p, img
+html, body, header, footer, nav, article, section, form, fieldset, legend, figure, figcaption, h1, h2, h3, ul, li, body, div, p, img, input
 {
     margin: 0;
     padding: 0;
