Create Type Chart page
Create Type Chart page for viewing type matchups

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -31,9 +31,7 @@
         Experiment with the type chart to view matchups between different type
         combinations.
       </span>
-      <img
-        src="../../../assets/home/TypeChart.png"
-      />
+      <img src="../../../assets/home/TypeChart.png" />
     </div>
   </div>
   <div class="section">
@@ -41,10 +39,11 @@
       <h2>Damage Calculator</h2>
     </div>
     <div>
-      <img style="margin-right: 100px;"
+      <img
+        style="margin-right: 100px;"
         src="../../../assets/home/SuperEffective.png"
       />
-      <span >
+      <span>
         Simulate turns of a battle with the in-depth damage calculator.
       </span>
     </div>
