--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <ul>
   <li class="left"><a href="/home">Home</a></li>
-  <li class="right"><a href="/pokedex">Pokedex</a></li>
+  <li class="right"><a href="/typechart">Type Chart</a></li>
+  <li class="right"><a href="/pokedex">Pokédex</a></li>
 </ul>
