--- a/src/app/pages/pokedex/pokedex.component.css
+++ b/src/app/pages/pokedex/pokedex.component.css
@@ -1,5 +1,6 @@
 body {
     height: auto;
+    min-height: 100%;
 }
 .pokedex {
   display: block;
@@ -13,14 +14,14 @@ body {
   border: 1px solid darkgray;
 }
 .pokemon {
-  padding: 10px 10px 10px 0px;
+  padding-bottom: 10px;
   border-bottom: 1px solid darkgray;
   background-color: whitesmoke;
 }
 .pokemon span {
   vertical-align: middle;
 }
-img {
+.sprite {
   vertical-align: middle;
   image-rendering: pixelated;
 }
@@ -66,7 +67,10 @@ h1 {
   text-decoration: none;
   float: left;
 }
-li:hover {
+.option {
+  cursor: pointer;
+}
+.option:hover {
   background-color: darkgray;
 }
 
@@ -84,86 +88,7 @@ li:hover {
   display: flex;
 }
 
-/*
-The below stylings are the background color for each type.
-Reference: https://bulbapedia.bulbagarden.net/wiki/Category:Type_color_templates
-*/
-
 .type {
-  padding: 5px;
-  margin: 5px 5px 5px 0px;
-  border-radius: 0.125rem;
-}
-
-/* Normal */
-.normal {
-  background-color: #a8a878;
-}
-/* Grass */
-.grass {
-  background-color: #78c850;
-}
-/* Water */
-.water {
-  background-color: #6890f0;
-}
-/* Fire */
-.fire {
-  background-color: #f08030;
-}
-/* Electric */
-.electric {
-  background-color: #f8d030;
-}
-/* Rock */
-.rock {
-  background-color: #b8a038;
-}
-/* Ground */
-.ground {
-  background-color: #e0c068;
-}
-/* Steel */
-.steel {
-  background-color: #b8b8d0;
-}
-/* Fighting */
-.fighting {
-  background-color: #c03028;
-}
-/* Ice */
-.ice {
-  background-color: #98d8d8;
-}
-/* Bug */
-.bug {
-  background-color: #a8b820;
-}
-/* Flying */
-.flying {
-  background-color: #a890f0;
-}
-/* Poison */
-.poison {
-  background-color: rgba(160, 64, 160, 0.726);
-}
-/* Psychic */
-.psychic {
-  background-color: #f85888;
-}
-/* Dark */
-.dark {
-  background-color: #645851c2;
-}
-/* Ghost */
-.ghost {
-  background-color: #a292bc;
-}
-/* Fairy */
-.fairy {
-  background-color: #ee99ac;
-}
-/* Dragon */
-.dragon {
-  background-color: #a27dfa;
+  vertical-align: middle;
+  margin: 5px 10px 0px 0px;
 }
